# BookStore_SDKTest

./: CMakeLists.txt  README.md
BookStoreLib/: CMakeLists.txt  HttpClient.cpp
BookStoreLib/include/BookStoreLib/: HttpClient.h
test_executable/: CMakeLists.txt  main.cpp
unit_tests/: CMakeLists.txt  HttpClientTests.cpp
